@@ -551,3 +551,8 @@
 2012-11-23  ChunEon Park (Hermet)
 
         * Free the text parts of the naviframe item when item is deleted.
+
+2012-11-29  ChunEon Park (Hermet)
+
+        * Fix the mapbuf to update it's contents correctly, even if they go
+        outside of the buffer
